force-app/main/default/objects/Account/fields/Mother_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Email__c</fullName>
    <description>Used when lead is converted, to determine if Mother is a returning client. Field is not updated and should not be used for other purposes.</description>
    <label>Mother&apos;s Email</label>
    <type>Email</type>
</CustomField>