force-app/main/default/objects/Account/fields/Multi_Touch_Count_Mktg_Spend__c.field-meta.xml
<CustomField>
    <fullName>Multi_Touch_Count_Mktg_Spend__c</fullName>
    <description>Counts when Touchpoint Source is source with marketing spend</description>
    <label>Multi-Touch Count Mktg Spend</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>