force-app/main/default/objects/Account/fields/n2de__Last_distributed__c.field-meta.xml
<CustomField>
    <fullName>n2de__Last_distributed__c</fullName>
    <label>Date last distributed to user</label>
    <type>DateTime</type>
</CustomField>