force-app/main/default/objects/Account/fields/n2de__Time_to_action_mins__c.field-meta.xml
<CustomField>
    <fullName>n2de__Time_to_action_mins__c</fullName>
    <label>Time to action (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>