force-app/main/default/objects/Account/fields/Ninety_Days_Activity__c.field-meta.xml
<CustomField>
    <fullName>Ninety_Days_Activity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used Roll-up Helper to count quarterly activities</description>
    <label>90 Days Activity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>