force-app/main/default/objects/Account/fields/No_Stipend__c.field-meta.xml
<CustomField>
    <fullName>No_Stipend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate when an HCP will not accept a Stipend. LSR will get commission for collections when HCP will not accept Stipend. This checkbox launchs a Process Builder that updates HCP Agreement to No Stipend.</description>
    <label>No Stipend</label>
    <type>Checkbox</type>
</CustomField>