force-app/main/default/objects/Account/fields/Not_Available_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Not_Available_Weekdays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Available Weekdays</label>
    <type>Checkbox</type>
</CustomField>