force-app/main/default/objects/Account/fields/Note_for_Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Note_for_Cover_Letter__c</fullName>
    <defaultValue>&quot;Thank you for your interest in partnering with Americord Registry. As we discussed, here is your Health Care Providers&apos; Agreement. Please review, sign, and return at your earliest convenience. Feel free to call or email with any questions.&quot;</defaultValue>
    <label>Note for Cover Letter</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>