force-app/main/default/objects/Account/fields/Number_of_Active_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Orders__c</fullName>
    <description>Field is populated by rollup/DLRS - Account_Number_of_Active_Orders2</description>
    <inlineHelpText>Number of &quot;Active&quot; Orders, Orders that were not canceled.</inlineHelpText>
    <label>Number of Active Orders</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>