force-app/main/default/objects/Account/fields/Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field is populated by rollup/DLRS - Account_Number_of_Active_Orders</description>
    <label>Number of Orders</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>