force-app/main/default/objects/Account/fields/Number_of_Orders_Practice__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders_Practice__c</fullName>
    <label>Number of Orders (Practice)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>