force-app/main/default/objects/Account/fields/OBGYN_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OBGYN Letter Sent</label>
    <type>Checkbox</type>
</CustomField>