force-app/main/default/objects/Account/fields/Owner_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Reassignment__c</fullName>
    <description>used with Distribution Engine to reassign Accounts and Contacts.</description>
    <label>Owner Reassignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>