force-app/main/default/objects/Account/fields/PA_Email__c.field-meta.xml
<CustomField>
    <fullName>PA_Email__c</fullName>
    <description>Used during the dedupe process for single accounts. can be deleted.</description>
    <formula>Portal_Authentication_LU__r.Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PA Email</label>
    <type>Text</type>
</CustomField>