force-app/main/default/objects/Account/fields/PA_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PA_First_Name__c</fullName>
    <description>Used to send email for account merge during Single Account / Single Contact launch.</description>
    <formula>Portal_Authentication_LU__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PA First Name</label>
    <type>Text</type>
</CustomField>