force-app/main/default/objects/Account/fields/Passive_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Passive_Status_Date__c</fullName>
    <label>Passive Status Date</label>
    <type>Date</type>
</CustomField>