force-app/main/default/objects/Account/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <description>auto populates payment schedule based on Account Owner profile. Outside Sales = monthly; Outreach Program = quarterly.</description>
    <formula>if ( Owner.Profile.Name = &quot;Outside Sales&quot;, &quot;month&quot;,
if ( Owner.Profile.Name = &quot;Outreach Program&quot;, &quot;quarter&quot;, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Schedule</label>
    <type>Text</type>
</CustomField>