force-app/main/default/objects/Account/fields/paymentplanawareness__c.field-meta.xml
<CustomField>
    <fullName>paymentplanawareness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for WTE survey. Data comes from Marketo onto Lead. Also maps to Opportunity.</description>
    <label>Payment plan awareness</label>
    <type>Checkbox</type>
</CustomField>