force-app/main/default/objects/Account/fields/planningtobank__c.field-meta.xml
<CustomField>
    <fullName>planningtobank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planning to bank OLD</label>
    <type>Checkbox</type>
</CustomField>