force-app/main/default/objects/Account/fields/Portal_Authentication_LU__c.field-meta.xml
<CustomField>
    <fullName>Portal_Authentication_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify Contacts / Accounts already with the same PA -- during the merge to Single Accounts. Temp field, can be deleted.</description>
    <label>Portal Authentication LU</label>
    <referenceTo>Portal_Authentication__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>