force-app/main/default/objects/Account/fields/preferred_comm_method__c.field-meta.xml
<CustomField>
    <fullName>preferred_comm_method__c</fullName>
    <description>used by WTE API survey, syncs with Marketo and mapped to Opportunity and Account</description>
    <label>preferred comm method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>