force-app/main/default/objects/Account/fields/Reassigned_Ownership_Date__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Ownership_Date__c</fullName>
    <description>Date the ownership of this record was reassigned.</description>
    <inlineHelpText>Date the ownership of this record was reassigned.</inlineHelpText>
    <label>Reassigned Ownership Date</label>
    <type>Date</type>
</CustomField>