force-app/main/default/objects/Account/fields/Reassigned_Ownership_From__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Ownership_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous owner of the record.</description>
    <inlineHelpText>Previous owner of the record.</inlineHelpText>
    <label>Reassigned Ownership From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reassigned_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>