force-app/main/default/objects/Account/fields/Refer_a_Friend__c.field-meta.xml
<CustomField>
    <fullName>Refer_a_Friend__c</fullName>
    <label>Refer a Friend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Refer_a_friend</valueSetName>
    </valueSet>
</CustomField>