force-app/main/default/objects/Account/fields/Rep_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Rep_Follow_up__c</fullName>
    <label>Rep Follow-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reps</valueSetName>
    </valueSet>
</CustomField>