force-app/main/default/objects/Account/fields/Retired_Closed__c.field-meta.xml
<CustomField>
    <fullName>Retired_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Outreach Program to indicate when a practice is no longer in business.</description>
    <label>Retired / Closed</label>
    <type>Checkbox</type>
</CustomField>