force-app/main/default/objects/Account/fields/Returning_Client__c.field-meta.xml
<CustomField>
    <fullName>Returning_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Old, not used any more, we use &quot;Number of Orders&quot; can be deleted.</description>
    <label>More than one order</label>
    <type>Checkbox</type>
</CustomField>