force-app/main/default/objects/Account/fields/Scheduled_birth__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_birth__c</fullName>
    <description>Info added to a record when customer selects &quot;Planned C-Section or Induction.[My delivery has been scheduled.]&quot; from step one of enrollment process.</description>
    <label>Scheduled birth</label>
    <type>TextArea</type>
</CustomField>