force-app/main/default/objects/Account/fields/Spring_Cleaning_2020__c.field-meta.xml
<CustomField>
    <fullName>Spring_Cleaning_2020__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag all contacts with Accounts that participated in Spring Cleaning 2020, so we can unsubscribe them from all future emails.</description>
    <label>Spring Cleaning 2020</label>
    <type>Checkbox</type>
</CustomField>