force-app/main/default/objects/Account/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <formula>RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>temp</label>
    <type>Text</type>
</CustomField>