force-app/main/default/objects/Account/fields/Terr_V1__c.field-meta.xml
<CustomField>
    <fullName>Terr_V1__c</fullName>
    <formula>Territory_Zip__r.Territory_V1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terr V1</label>
    <type>Text</type>
</CustomField>