force-app/main/default/objects/Account/fields/Territory_Zip__c.field-meta.xml
<CustomField>
    <fullName>Territory_Zip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Zip</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>OBGYN_Practice_and_Hospitals</relationshipName>
    <type>Lookup</type>
</CustomField>