force-app/main/default/objects/Account/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <formula>today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today&apos;s Date</label>
    <type>Date</type>
</CustomField>