force-app/main/default/objects/Account/fields/Two_Fathers__c.field-meta.xml
<CustomField>
    <fullName>Two_Fathers__c</fullName>
    <description>Used with Rollup Helper to count fathers and identify any data quality issues because of incorrect deduping by Duplicate Field is populated by rollup/DLRS - Account_Count_Fathers</description>
    <label>Two Fathers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>