force-app/main/default/objects/Account/fields/Two_Mothers__c.field-meta.xml
<CustomField>
    <fullName>Two_Mothers__c</fullName>
    <description>Uses rollup help to count two or more mothers, used to identify error with Duplicate Check dedupe. Field is populated by rollup/DLRS - Account_Count_Mothers</description>
    <label>Two Mothers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>