force-app/main/default/objects/Account/fields/W_9_Practice__c.field-meta.xml
<CustomField>
    <fullName>W_9_Practice__c</fullName>
    <label>W-9 (Practice)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>