force-app/main/default/objects/Account/fields/Why_are_you_interested__c.field-meta.xml
<CustomField>
    <fullName>Why_are_you_interested__c</fullName>
    <description>populated by Info Kit pull-down, why are you interested in cord blood banking.</description>
    <label>Why are you interested?</label>
    <length>60</length>
    <type>Text</type>
</CustomField>