force-app/main/default/objects/Account/fields/whynotbank__c.field-meta.xml
<CustomField>
    <fullName>whynotbank__c</fullName>
    <label>Why not bank</label>
    <length>40</length>
    <type>Text</type>
</CustomField>