force-app/main/default/objects/Account/recordTypes/Professionals.recordType-meta.xml
<RecordType>
    <fullName>Professionals</fullName>
    <active>true</active>
    <label>Professionals</label>
</RecordType>