force-app/main/default/objects/Account/listViews/All_Surrogates.listView-meta.xml
<ListView>
    <fullName>All_Surrogates</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>Brochures__c</columns>
    <columns>Americord_Link__c</columns>
    <columns>Americord_Collateral__c</columns>
    <columns>Link_Swap__c</columns>
    <columns>Landing_Page__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Surrogacy</value>
    </filters>
    <label>All Surrogates</label>
    <sharedTo>
        <role>CEO</role>
        <role>Client_Services</role>
        <role>Sales</role>
    </sharedTo>
</ListView>