force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>1/1/2017 12:00 AM</value>
    </filters>
    <label>All Accounts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>